# pethealth

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.production.yml
.github/workflows/: ci.yml
src/: agent.rs  auth.rs  config.rs  db.rs  domain.rs  main.rs  mcp.rs  ocr.rs  web.rs
static/: app.css  app.js
templates/: _agent_timeline.html  _mcp_connect.html  _shares.html  account.html  console.html  login.html  register.html  shared_pet.html
