[package]
name = "pethealth"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "A self-hostable pet health timeline with agent-assisted capture"

[dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.14"
async-trait = "0.1"
axum = { version = "=0.8.8", features = ["form", "macros", "query", "multipart"] }
axum-macros = "=0.5.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
rig-core = "0.40"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Keep these transitive versions aligned with the locally audited source cache.
time = "=0.3.53"
zerocopy = "=0.8.54"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
